<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_drawer"
        >
        <android.support.design.widget.CoordinatorLayout

                android:id="@+id/main_coordinator_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            
            <android.support.design.widget.AppBarLayout
                android:theme="@style/AppTheme.AppBarOverlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>

                <android.support.v4.widget.NestedScrollView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/head_gray">

                            <LinearLayout
                                style="@style/header">

                            <TextView
                                style="@style/font_size"/>

                                <TextView
                                    style="@style/bottom_txt"
                                    android:text="@string/rating"/>


                            </LinearLayout>

                            <LinearLayout
                                style="@style/separat">
                            </LinearLayout>


                            <LinearLayout
                            style="@style/header_c">

                            <TextView
                                style="@style/font_size"/>

                            <TextView
                                style="@style/bottom_txt"
                                android:text="@string/code"/>

                            </LinearLayout>

                            <LinearLayout
                                style="@style/separat">
                            </LinearLayout>

                            <LinearLayout
                                style="@style/header">

                            <TextView
                                style="@style/font_size"/>

                            <TextView
                                style="@style/bottom_txt"
                                android:text="@string/projects"/>

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                                style="@style/based">

                                <ImageView
                                    style="@style/icon.left"
                                    android:src="@drawable/ic_call_black_24dp"/>


                            <LinearLayout
                                    style="@style/base_ins">

                                    <android.support.design.widget.TextInputLayout

                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                        <EditText
                                            style="@style/ed_txt"
                                            android:id="@+id/phone_et"
                                            android:hint="@string/mobile"
                                            android:enabled="false"
                                            android:focusable="false"
                                            android:text="@string/number"/>

                                    </android.support.design.widget.TextInputLayout>

                                </LinearLayout>

                                <ImageView

                                    android:id="@+id/call_img"
                                    style="@style/icon.right"
                                    android:src="@drawable/ic_phone_in_talk_black_24dp"
                                    />
                            </LinearLayout>

                        <View
                            style="@style/view"/>

                            <LinearLayout
                                style="@style/based">

                                <ImageView
                                    style="@style/icon.left"
                                    android:src="@drawable/ic_email_black_24dp"/>

                                <LinearLayout
                                    style="@style/base_ins">

                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                        <EditText
                                            style="@style/ed_txt"
                                            android:id="@+id/email_et"
                                            android:hint="@string/email"
                                            android:text="@string/mail"
                                            android:enabled="false"
                                            android:focusable="false"/>

                                    </android.support.design.widget.TextInputLayout>

                                </LinearLayout>

                                <ImageView

                                    style="@style/icon.right"
                                    android:src="@drawable/ic_send_black_24dp"
                                    />
                            </LinearLayout>

                        <View
                            style="@style/view"/>

                            <LinearLayout
                                style="@style/based">

                                <ImageView
                                    style="@style/icon.left"
                                    android:src="@drawable/ic_vk_grey600_24dp"

                                    />

                                <LinearLayout
                                    style="@style/base_ins">

                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                        <EditText
                                            style="@style/ed_txt"
                                            android:id="@+id/vk_prof_et"
                                            android:enabled="false"
                                            android:focusable="false"
                                            android:hint="@string/VK"
                                            android:text="@string/VK.com"/>

                                    </android.support.design.widget.TextInputLayout>

                                </LinearLayout>

                                <ImageView

                                    style="@style/icon.right"
                                    android:src="@drawable/ic_visibility_black_24dp"
                                    />
                            </LinearLayout>
                        <View
                            style="@style/view"/>

                            <LinearLayout
                                style="@style/based">

                                <ImageView
                                    style="@style/icon.left"
                                    android:src="@drawable/ic_github_circle"

                                    />

                                <LinearLayout
                                    style="@style/base_ins">

                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                        <EditText
                                            style="@style/ed_txt"
                                            android:id="@+id/git_repo_et"
                                            android:enabled="false"
                                            android:focusable="false"
                                            android:text="@string/Git"
                                            android:hint="@string/repo"/>

                                    </android.support.design.widget.TextInputLayout>

                                </LinearLayout>

                                <ImageView

                                    style="@style/icon.right"
                                    android:src="@drawable/ic_visibility_black_24dp"
                                    />
                            </LinearLayout>

                        <View
                            style="@style/view"/>

                            <LinearLayout
                                style="@style/based">

                                <ImageView
                                    style="@style/icon.left"
                                    android:src="@drawable/ic_face_black_24dp"

                                    />

                                <LinearLayout
                                    style="@style/base_ins">

                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                        <EditText
                                            style="@style/ed_txt"
                                            android:enabled="false"
                                            android:focusable="false"
                                            android:id="@+id/mySelf_et"
                                            android:hint="@string/myself"
                                            android:text="@string/devInt"/>

                                    </android.support.design.widget.TextInputLayout>

                                </LinearLayout>

                            </LinearLayout>

                        <View
                            style="@style/view"/>

                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>
            </android.support.design.widget.CoordinatorLayout>
        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/drawer_menu">
        </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>